test/files/pos/t5692a/Macros_1.scala
import scala.reflect.macros.BlackboxContext

object Macros {
  def impl[T](c: BlackboxContext) = { import c.universe._; c.Expr[Unit](q"()") }
  def foo[T] = macro impl[T]
}